# smart-horses

./: .gitignore  board.py  board_modificado.py  button.py  colours.py  main.py  main_modificado.py  pyproject.toml  settings.py
